force-app/main/default/objects/fboost__B_AsyncJobConfig__mdt/fboost__B_AsyncJobConfig__mdt.object-meta.xml
<CustomObject>
    <description>Additional Boost Async Jobs Configuration</description>
    <label>Boost Async Job Config</label>
    <pluralLabel>Boost Async Job Config</pluralLabel>
</CustomObject>