force-app/main/default/objects/fboost__B_AsyncJobConfig__mdt/fields/fboost__AsyncLimitThreshold__c.field-meta.xml
<CustomField>
    <fullName>fboost__AsyncLimitThreshold__c</fullName>
    <defaultValue>1.0</defaultValue>
    <description>Determines when to Async Apex job will be executed only when the actual Platform Async Limit is lower than the provided threshold</description>
    <inlineHelpText>Async Apex job will be executed only when the actual Platform Async Limit is lower than the provided threshold.</inlineHelpText>
    <label>Async Limit Threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>