force-app/main/default/objects/fboost__B_AsyncJobConfig__mdt/fields/fboost__ChunkSize__c.field-meta.xml
<CustomField>
    <fullName>fboost__ChunkSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Determines number of records which could be executed in single Future, Queueable or Batch Chunk job</description>
    <inlineHelpText>Determines number of records which could be executed in single Future, Queueable or Batch Chunk job</inlineHelpText>
    <label>Process Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>