force-app/main/default/objects/fboost__B_AsyncJobConfig__mdt/fields/fboost__EnforceUniqueBatch__c.field-meta.xml
<CustomField>
    <fullName>fboost__EnforceUniqueBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>With this flag system enabled Enforces Batch Uniqueness - system will not run more than 1 batch process (works only with Scheduled Batches)</description>
    <inlineHelpText>With this flag system enabled Enforces Batch Uniqueness - system will not run more than 1 batch process (works only with Scheduled Batches)</inlineHelpText>
    <label>Enforce Unique Batch</label>
    <type>Checkbox</type>
</CustomField>