force-app/main/default/objects/fboost__B_AsyncJobConfig__mdt/fields/fboost__IsActive__c.field-meta.xml
<CustomField>
    <fullName>fboost__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activates async process execution</description>
    <inlineHelpText>Activates async process execution</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>