force-app/main/default/objects/fboost__B_AsyncJobConfig__mdt/fields/fboost__QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>fboost__QueryLimit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum number of records which could be queried in the single processing iteration. System will create Query Limit / Chunk Size Async job processes.</description>
    <inlineHelpText>Maximum number of records which could be queried in the single processing iteration. System will create Query Limit / Chunk Size Async job processes.</inlineHelpText>
    <label>Query Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>