force-app/main/default/objects/fboost__B_AsyncJobConfig__mdt/listViews/fboost__All.listView-meta.xml
<ListView>
    <fullName>fboost__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>fboost__ProcessName__c</columns>
    <columns>fboost__ChunkSize__c</columns>
    <columns>fboost__QueryLimit__c</columns>
    <columns>fboost__IsActive__c</columns>
    <columns>fboost__AsyncLimitThreshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>